# MyReactAgent

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/commands/: git-upload.md
.claude/subagents/: architect.md  core-developer.md  docs-writer.md  test-engineer.md  test-file-reviewer.md  tool-developer.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
demos/: .env.example  README.md  _anthropic_adapter.py  _utils.py  requirements.txt
demos/phase1/: 01_basic_react_loop.py  02_multi_turn_memory.py  03_streaming.py  04_callbacks.py  05_tools_advanced.py  06_multi_provider.py  run_all.py  test_report.md
examples/: 01_basic_tool_use.py
explore_docs/01_competitive_analysis/: analysis_summary.md  multimodal_input_analysis.md  teammate1_agent_design_philosophy.md  teammate2_reference_projects_analysis.md
myreactagent/: __init__.py
myreactagent/agent/: react.py
myreactagent/callbacks/: base.py  console.py
myreactagent/llm/: client.py
myreactagent/memory/: conversation.py
myreactagent/schemas/: __init__.py  events.py  messages.py  tools.py
myreactagent/tools/: base.py  decorator.py  registry.py
specs/: deferred-items.md
specs/001-phase1-mvp-prototype/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: test_e2e.py
tests/unit/: test_agent.py  test_callbacks.py  test_llm_client.py  (+4 more)
(+3 files in other folders)
