[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myreactagent"
version = "0.1.0"
description = "A hand-crafted ReAct Agent framework for learning and production use"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["myreactagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real API key (deselect with '-m not integration')",
]
